<resources>
    <string name="nav_chat">Chat</string>
    <string name="nav_agents">Agents</string>
    <string name="nav_settings">Settings</string>
</resources>
